--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "bootstrap-icons": "^1.11.3",
         "concurrently": "^9.0.1",
+        "daisyui": "^4.12.14",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.15",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "rippleui": "^1.12.1"
     }
 }
